# waveformtools

./: .generate_version.py  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  Code_of_Conduct.md  LICENSE  README.md  addvers.sh  codex_handoff_plan.md  optional-requirements.txt  pyproject.toml  qnm_functions.py  requirements.txt  setup.py  sim  waveformtools.py
.docs_backup/: environment.yml
.docs_backup/_static/: classic.css
.docs_backup/source/: conf_old.py  index.rst  simulations.rst
.github/workflows/: ci.yml  optional-backends.yml  publish.yml
dev/: trialHistory.txt
dev/nbs/: develop_get_waveform.ipynb  test_lal_to_nr_angles.ipynb  test_ylm.ipynb  waveform_coordinate_transforms.ipynb
dev/notebooks/: EccContPrec.pkl  EccPrec.pkl  Errors000.txt  ICTSEccParallel.pkl  ICTS_extrapolate.ipynb  discover_sims_ICTSEccParallel_Nov11.ipynb  discover_sims_combined_plots.ipynb  discover_sims_eccprec.ipynb  discover_sims_eccprec_mar5.ipynb  discover_sims_mar11.ipynb  extrapolate_icts.py  get_ref_values.ipynb  get_ref_values_ICTSEccParallel.ipynb  sims.ipynb  waveform_load.ipynb  wprep_history_dev.ipynb
development/waveformtools_dev/: README  requirements.txt  sandbox.ipynb  setup.py  waveformtools_dev.py
docs/: environment.yaml  environment.yml  model_capabilities.md  requirements.txt
docs/.doctrees/: environment.pickle
docs/_static/: basic.css
docs/developer/: comparison_alignment_manifest.md  performance.md
docs/source/: README.md  api.rst  basic_features.rst  conf.py  conf_backup.py  index.rst  simulations.rst  sxs.rst  transforms.rst  waveforms.rst  waveformtools.rst
examples/: RIT_data_IO.ipynb  validate_fd_modes_as_td.ipynb
examples /: RIT_data_IO.ipynb
examples/.ipynb_checkpoints/: RIT_data_IO-checkpoint.ipynb
examples/notebooks/: balance_law_repair_projection.ipynb  comparison_alignment_features.ipynb  fitting_factor_config_features.ipynb  generate_waveforms.ipynb  nrsur7dq4_balance_law_diagnostics.ipynb  nrsur_phenomxphm_bms_frame_fitting_factor.ipynb  phenomxphm_nrsur7dq4_fitting_factor_template.ipynb  rotation_optimization_features.ipynb  seobnrv5phm_balance_law_diagnostics.ipynb  waveform_data_IO.ipynb
public/: .buildinfo  api.html  basic_features.html  date.txt  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  simulations.html  version
public/.doctrees/: README.doctree  api.doctree  basic_features.doctree  environment.pickle  simulations.doctree
public/_autosummary/: waveformtools.BMS.html  waveformtools.CoM.html  waveformtools.compare.html  waveformtools.dataIO.html  waveformtools.diagnostics.html  waveformtools.extrapolate.html  waveformtools.html  (+4 more)
test/: test_balance_law_repair.py  test_bms.py  test_bms_frame_diagnostics.py  test_bms_frame_preprocessing.py  test_chunked_balance_laws.py  test_comparison.py  test_comparison_real_waveforms.py  test_conventions.py  test_eob_waveform_model.py  test_evaluate_angular.py  test_fd_to_td.py  test_import_hygiene.py  test_integrate.py  test_memory.py  test_memory_real_balance_law.py  test_message_logging.py  test_rotation_math.py  test_rotations_import.py  test_spherical_array.py  test_teobresums_waveform_model.py  test_transforms.py  test_waveform_corrections.py  test_waveform_model_generation_smoke.py  test_ylm.py  test_yslm.py
waveformtools/: .differentiate.py.swp  .integrate.py.swp  .simulations.py.swp  .waveforms.py.swp  .waveformtools.py.swp  BMS.py  CoM.py  __init__.py  balance_law_repair.py  bms_frame_diagnostics.py  bms_frame_preprocessing.py  chunked_balance_laws.py  compare.py  config.py  conventions.py  dataIO.py  dataIO.py.bak  diagnostics.py  differentiate.py  extrapolate.py  fd_to_td.py  grids.py  integrate.py  legacy.py  memory.py  meta.py  modes_array.py  prepare_waveforms.py  rotation_math.py  rotations.py  run_prepare_waveforms.py  simulations.py  single_mode.py  spherical.py  spherical_array.py  transforms.py  waveform_corrections.py  waveform_models.py  waveform_models_utils.py  waveforms.py  (+7 more)
(+100 files in other folders)
