[tool.black]
line-length = 80

[tool.isort]
profile = "black"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable= "W0311"

[tool.flake8]
max-line-length = 120
ignore = ['E203']

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "waveformtools"
dynamic = ['version']
authors = [{ name="Vaishak Prasad", email="vaishakprasad@gmail.com"}, ]
description = " Tools for working with numerical relativity and waveforms data "
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy",
	"scipy",
	"matplotlib",
	"numba",
	"h5py",
	"termcolor",
	"datetime",
	"sympy",
	"numpydoc"]

[project.optional-dependencies]
EXT = ["pycbc", "lalsuite", "ligo-common"]

[project.urls]
"Homepage" = "https://gitlab.com/vaishakp/waveformtools"
"Bug Tracker" = "https://gitlab.com/vaishakp/waveformtools/issues"


[tools.setuptools.dynamic]
version = {attr = "waveformtools.__version__"}

