[tool.black]
line-length = 80

[tool.isort]
profile = "black"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable= "W0311"

[tool.flake8]
max-line-length = 120
ignore = ['E203']

[build-system]
#requires = ["setuptools"]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"
#build-backend = "setuptools.build_meta"

[tool.hatch.version]
path = "waveformtools/__init__.py"

#[tool.setuptools.dynamic]
#version = {attr = "waveformtools.__version__"}
#dependencies = {file = ["requirements.txt"] }
#optional-dependencies = {ext = { file = ["optional-requirements.txt"]}}

[project]
name = "waveformtools"
dynamic = ['version', 'dependencies', 'optional-dependencies']
authors = [{ name="Vaishak Prasad", email="vaishakprasad@gmail.com"}, ]
description = " Tools for working with numerical relativity and waveforms data "
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
opt = ["optional-requirements.txt"]

[project.urls]
"Homepage" = "https://gitlab.com/vaishakp/waveformtools"
"Bug Tracker" = "https://gitlab.com/vaishakp/waveformtools/issues"

[tool.hatch.metadata]
allow-direct-references = true


